Changed to better word

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    Welcome to the home page of Andrea Pettys 
 </p>
 <p>
- Hi Everyone and Welcome!
+ Hello Everyone and Welcome!
 </p>
 
 <a href="https://www.google.com/">Want to look anything up?</a>
