--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Hello, World!</h1>
 
 <p>
-   Welcome to the home page of Andrea Pettys 
+   Welcome to the home page of Andrea Pettys.
 </p>
 <p>
  Hello Everyone and Welcome!
